# pyscoped

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: adapters.md  api-reference.md  architecture.md  connectors.md  events-webhooks.md  exceptions.md  getting-started.md  manifest.json  multi-tenant.md  operations.md  runtime-engine.md  scheduling.md  security.md  testing.md
docs/api/: audit.md  client.md  objects.md  principals.md  scopes.md  secrets.md  storage.md
docs/extensions/: A1-migrations.md  A2-contracts.md  A3-rule-extensions.md  A4-blobs.md  A5-config.md  A6-search.md  A7-templates.md  A8-tiering.md  A9-import-export.md
docs/integrations/: django.md  fastapi.md  flask.md  mcp.md
docs/layers/: 00-compliance.md  01-registry.md  02-identity.md  03-objects.md  04-tenancy.md  05-rules.md  06-audit.md  07-temporal.md  08-environments.md  09-flow.md  10-deployments.md  11-secrets.md  12-integrations.md  13-connector.md  14-events.md  15-notifications.md  16-scheduling.md
scoped/: __init__.py  _stability.py  _type_adapters.py  _type_registry.py  client.py  conf.py  exceptions.py  ids.py  logging.py  types.py
scoped/_namespaces/: __init__.py  _base.py  audit.py  environments.py  flow.py  objects.py  pipelines.py  principals.py  promotions.py  scopes.py  secrets.py
scoped/audit/: __init__.py  models.py  query.py  retention.py  writer.py
scoped/connector/: __init__.py  bridge.py  models.py  protocol.py
scoped/contrib/: __init__.py  _base.py  otel.py
scoped/deployments/: __init__.py  executor.py  gate_types.py  gates.py  models.py  rollback.py
scoped/environments/: __init__.py  container.py  lifecycle.py  models.py  snapshot.py
scoped/events/: __init__.py  bus.py  config_types.py  crypto.py  models.py  subscriptions.py  webhooks.py
scoped/flow/: __init__.py  engine.py  models.py  pipeline.py  promotion.py
scoped/identity/: __init__.py  context.py  principal.py  resolver.py
scoped/integrations/: __init__.py  connectors.py  hooks.py  lifecycle.py  models.py  plugin_types.py  sandbox.py
scoped/manifest/: __init__.py  _services.py  exceptions.py  loader.py  parser.py  resolver.py  schema.py  validator.py
scoped/notifications/: __init__.py  delivery.py  engine.py  models.py  preferences.py
scoped/objects/: __init__.py  _search_strategies.py  blobs.py  export.py  import_.py  isolation.py  manager.py  models.py  search.py  versioning.py
scoped/registry/: __init__.py  base.py  contracts.py  decorators.py  introspection.py  kinds.py  sqlite_store.py  store.py  templates.py
scoped/rules/: __init__.py  builtins.py  cache.py  compiler.py  conditions.py  engine.py  features.py  models.py  quotas.py  rate_limit.py  redaction.py
scoped/scheduling/: __init__.py  models.py  queue.py  scheduler.py
scoped/secrets/: __init__.py  aws_kms.py  backend.py  (+6 more)
tests/: conftest.py  test_ids.py  test_isolation.py  test_logging_structured.py  test_phase0_fixes.py  test_phase1_fixes.py  test_phase2_fixes.py  test_phase3_fixes.py  test_stability.py  test_typed_configs.py  test_typed_objects.py  test_urn_validation.py
(+228 files in other folders)
