[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyscoped"
version = "0.1.3"
description = "Universal object-isolation and tenancy-scoping framework"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "kwip-info"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/kwip-info/pyscoped"
Repository = "https://github.com/kwip-info/pyscoped"

[project.optional-dependencies]
sqlite = ["aiosqlite>=0.19"]
django = ["django>=4.2"]
fastapi = ["fastapi>=0.100", "pydantic>=2.0"]
flask = ["flask>=3.0"]
mcp = ["mcp>=1.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["scoped"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100
