[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyscoped"
version = "0.9.6"
description = "Universal object-isolation and tenancy-scoping framework"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "kwip-info"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = ["pydantic>=2.0", "sqlalchemy>=2.0"]

[project.urls]
Homepage = "https://github.com/kwip-info/pyscoped"
Repository = "https://github.com/kwip-info/pyscoped"

[project.optional-dependencies]
sqlite = ["aiosqlite>=0.19"]
postgres = ["psycopg[binary]>=3.1", "psycopg_pool>=3.1"]
aws = ["boto3>=1.28"]
gcp = ["google-cloud-kms>=2.21", "google-cloud-storage>=2.14"]
otel = ["opentelemetry-api>=1.20"]
django = ["django>=4.2"]
fastapi = ["fastapi>=0.100", "pydantic>=2.0"]
flask = ["flask>=3.0"]
mcp = ["mcp>=1.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "boto3>=1.28",
    "google-cloud-kms>=2.21",
    "google-cloud-storage>=2.14",
    "psycopg[binary]>=3.1",
    "psycopg_pool>=3.1",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["scoped"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "sqlite_only: Run only with SQLite backend",
    "postgres_only: Run only with PostgreSQL backend",
]

[tool.ruff]
target-version = "py311"
line-length = 100
